@@ -1,5 +1,5 @@
 # uninst-gpgme.nsi - Installer snippet for gpgme.   -*- coding: latin-1; -*-
-# Copyright (C) 2005 g10 Code GmbH
+# Copyright (C) 2005, 2007 g10 Code GmbH
 # 
 # This file is part of GPG4Win.
 # 
@@ -32,6 +32,7 @@ Section "-un.gpgme"
 !else
   Delete "$INSTDIR\libgpgme-11.dll"
   Delete "$INSTDIR\libgpgme-glib-11.dll"
+  Delete "$INSTDIR\libgpgme-qt-11.dll"
   RMDir "$INSTDIR"
 !endif
 SectionEnd
