@@ -1,3 +1,14 @@
+2007-09-07  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Remove LDFLAGS,
+	add --enable-w32-qt and work around Qt's lack of cross compilation
+	support.
+	* src/gpg4win.mk.in (stamps/stamp-$(1)-02-configure): Call
+	configure through eval, so that configure options with spaces are
+	quoted properly.
+	* src/inst-gpgme.nsi [!GPG4WIN_LIGHT]: Install libgpgme-qt-11.dll.
+	* src/uninst-gpgme.nsi: Uninstall libgpgme-qt-11.dll.
+	
 2007-08-30  Marcus Brinkmann  <marcus@g10code.de>
 
 	* configure.ac: Add gpgex.
